xfsprogs-2.9.0 (5 June 2007)
	- Added new tools: xfs_metadump and xfs_mdrestore.
	- Fix up the HAVE___U32 fix from 2.8.20
	  Thanks to Eric Sandeen for pointing this out.

xfsprogs-2.8.21 (28 May 2007)
	- Add support for lazy superblock counters in mkfs.xfs, xfs_db,
	  xfs_repair, xfs_growfs and also libxfs.
	- Fix xfs_quota project command to stop it operating on special files.
	  Thanks to Leo Baltus.

xfsprogs-2.8.20 (23 February 2007)
	- Fix xfs_repair not detecting invalid btree root in inodes.
	- Fix xfs_repair restoring corrupted superblock after repairing it.
	- Fix xfs_repair crashing on invalid quota inode values.
	- Fix xfs_quota gracetime reporting.
	  Thanks to Utako Kusaka <utako@tnes.nec.co.jp> for this.
	- Fix libxfs IO_DEBUG output.
	- Instead of using AC_CHECK_TYPES which isn't supported for
	  older versions of autoconf, add our own type check in the
	  m4/package_types.m4 file for __u32.
	  Suggested by Nathan Scott and discovered by wookey@aleph1.co.uk.

xfsprogs-2.8.19 (31 January 2007)
	- Fix pthread stack size setting in xfs_repair.
	- Fix xfs_bmap -n option displaying a truncated extent.
	- Fix xfs_io mwrite segfault. Thanks to Utako Kusaka for these two
	  fixes.
	- Fix errors in xfs_quota(8) man page.

xfsprogs-2.8.18 (8 December 2006)
 	- <xfs/list.h> is an installed file, we cannot simply rename it,
 	  as other applications using it (accidentally or not) may break.
 	  The xfs_list.h name was inconsistent with everything else too.
 	- Fix "pointer targets in assignment differ in signedness" warnings
 	- Update Debian packaging.
	- Fix up two issues with xfs_db and bmap. If the data/attr fork is
	  local, it either infinite loops or crashes. If both are displayed,
	  the attrs are wrong.
	- Fix up xfs_io mmap read that read from the wrong offset.
	- Updated xfs_io man page.
	  Thanks to Utako Kusaka <utako@tnes.nec.co.jp> for the above three
	  fixes.

xfsprogs-2.8.17 (5 December 2006)