@@ -1,3 +1,10 @@
+xfsprogs-2.9.1 (28 June 2007)
+	- Added filestreams support to xfs_io.
+	- Fix up libattr Makefile to append to LTLDFLAGS. Thanks to
+	  Arfrever Frehtes Taifersar Arahesis <Arfrever.FTA@GMail.Com> for this.
+	- Fix up build not to ignore LDFLAGS generated by configure.
+	  Thanks to SpanKY <vapier@gentoo.org> for this.
+
 xfsprogs-2.9.0 (5 June 2007)
 	- Added new tools: xfs_metadump and xfs_mdrestore.
 	- Fix up the HAVE___U32 fix from 2.8.20
